--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         alt="Picture of a cat"
       />
       <p class="title">
-        Bé iuu ơi choo anhh xinn lỗi nhóooo😭<br /><span
-          >Bé hong chọn hoặc thoát là tha lỗi cho anh đó</span
+        Bé iuu ơi choo chị xinn lỗi mòoo😭<br /><span
+          >Bé hong chọn hoặc thoát là tha lỗi cho chị đó nha</span
         >
       </p>
       <div class="buttons">
